--- a/style.css
+++ b/style.css
@@ -7,8 +7,39 @@ body {
     padding: 20px;
 }
 
+h1 {
+    color: #034c05;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:bolder;
+}
+
 h2 {
     color: #4CAF50;
+}
+
+/* Basic styling for the navigation bar */
+.navbar {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    background-color: #333;
+}
+
+.navbar li {
+    margin: 0;
+}
+
+.navbar li a {
+    display: block;
+    padding: 14px 20px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.navbar li a:hover {
+    background-color: #034c05;
 }
 
 table {
