--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,11 @@
 <!-- index.hbs -->
-    <h1>{{message}}</h1>
+    <h1>Leaf Me Alone</h1>
     <nav>
         <ul class="navbar">
             <li><a href="index.html">Home</a></li>
             <li><a href="customers.html">Customers</a></li>
             <li><a href="orders.html">Orders</a></li>
-            <li><a href="plants.html">Plants</a></li>
+            <li><a href="https://web.engr.oregonstate.edu/~kims7/leaf-me-alone/plants.html">Plants</a></li>
             <li><a href="suppliers.html">Suppliers</a></li>
             <li><a href="plantssuppliers.html">Plants Suppliers</a></li>
         </ul>
