--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,26 +1,15 @@
 <!-- index.hbs -->
-    <h1>Leaf Me Alone</h1>
-    <nav>
-        <ul class="navbar">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="customers.html">Customers</a></li>
-            <li><a href="orders.html">Orders</a></li>
-            <li><a href="https://web.engr.oregonstate.edu/~kims7/leaf-me-alone/plants.html">Plants</a></li>
-            <li><a href="suppliers.html">Suppliers</a></li>
-            <li><a href="plantssuppliers.html">Plants Suppliers</a></li>
-        </ul>
-    </nav>
 
     <h2>Home Page</h2>
     <p>Welcome to the Leaf Me Alone company data management system. This platform can help you update your customer records, orders, 
         plant stock, and suppliers. See below for a quick overview of what actions you can perform for each record.</p>
     <h3>Customers</h3>
-    <p>Within the <a href="customers.html">"Customers"</a> page, you are able to view the current customers of Leaf Me Alone. You will also be able to add new customers, edit customer information and delete customer records.</p>
+    <p>Within the <a href="customers">"Customers"</a> page, you are able to view the current customers of Leaf Me Alone. You will also be able to add new customers, edit customer information and delete customer records.</p>
     <h3>Orders</h3>
-    <p>The <a href="orders.html">"Orders"</a> page allows you to view all the orders for Leaf Me Alone. You can add new orders, update existing orders, and delete orders.</p>
+    <p>The <a href="orders">"Orders"</a> page allows you to view all the orders for Leaf Me Alone. You can add new orders, update existing orders, and delete orders.</p>
     <h3>Plants</h3>
-    <p>The <a href="plants.html">"Plants"</a> page provides an inventory of plants Leaf Me Alone currently sells. View this page to update the inventory or make adjustments, add new plants to the inventory, or delete a plant from our stock.</p>
+    <p>The <a href="plants">"Plants"</a> page provides an inventory of plants Leaf Me Alone currently sells. View this page to update the inventory or make adjustments, add new plants to the inventory, or delete a plant from our stock.</p>
     <h3>Suppliers</h3>
-    <p>Next, our <a href="suppliers.html">"Suppliers"</a> page gives you a view of all of our plant suppliers. Navigate to this page to update, add, or delete suppliers for our plants.</p>
+    <p>Next, our <a href="suppliers">"Suppliers"</a> page gives you a view of all of our plant suppliers. Navigate to this page to update, add, or delete suppliers for our plants.</p>
     <h3>Plants Suppliers</h3>
-    <p>Finally, the <a href="plantssuppliers.html">"Plants Suppliers</a> page allows you to see which plants are supplied by a provider.</p>
+    <p>Finally, the <a href="plantssuppliers">"Plants Suppliers</a> page allows you to see which plants are supplied by a provider.</p>
