--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,12 +10,12 @@
     <h1>Leaf Me Alone</h1>
         <nav>
             <ul class="navbar">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="customers.html">Customers</a></li>
-                <li><a href="orders.html">Orders</a></li>
-                <li><a href="https://web.engr.oregonstate.edu/~kims7/leaf-me-alone/plants.html">Plants</a></li>
-                <li><a href="suppliers.html">Suppliers</a></li>
-                <li><a href="plantssuppliers.html">Plants Suppliers</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="customers">Customers</a></li>
+                <li><a href="orders">Orders</a></li>
+                <li><a href="plants">Plants</a></li>
+                <li><a href="suppliers">Suppliers</a></li>
+                <li><a href="plantssuppliers">Plants Suppliers</a></li>
             </ul>
         </nav>
     {{{body}}}
