Hide the plantID

--- a/views/plants.hbs
+++ b/views/plants.hbs
@@ -35,8 +35,8 @@
         <h3 id="formHeader"></h3>
         <form id="plantForm" data-mode="">
             <fieldset>
-            <nobr><label for="plantID">Plant ID:</label>
-            <input type="number" id="plantID" readonly></nobr>
+            <nobr><label for="plantID"><!--Plant ID:--></label>
+            <input type="hidden" id="plantID" readonly></nobr>
             
             <nobr><label for="plantName">Name:</label>
             <input type="text" id="plantName"></nobr>
