Added plant maturity dropdown

--- a/views/plants.hbs
+++ b/views/plants.hbs
@@ -51,7 +51,11 @@
             </select></nobr>
             
             <nobr><label for="plantMaturity">Maturity:</label>
-            <input type="text" id="plantMaturity"></nobr>
+            <select type="text" id="plantMaturity" name="plantMaturity">
+                <option>Mature</option>
+                <option>Seedling</option>
+                <option>Sapling</option>
+            </select></nobr>
             
             <nobr><label for="plantPrice">Price:</label>
             <input type="number" id="plantPrice"></nobr>
