Added plantSupplierID and plantQuantity to PlantsSuppliers and changed files to accomodate

--- a/views/suppliers.hbs
+++ b/views/suppliers.hbs
@@ -9,7 +9,7 @@
         <th>Phone</th>
         <th>Email</th>
         <th>Amount Due</th>
-        <th></th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
