--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -12,7 +12,7 @@
         <th>Phone</th>
         <th>Address</th>
         <th>Create Date</th>
-        <th></th>
+        <th>Actions</th>
     </tr>
     </thead>
     <tbody>
