--- a/views/plants.hbs
+++ b/views/plants.hbs
@@ -10,8 +10,7 @@
         <th>Maturity</th>
         <th>Price</th>
         <th>Cost</th>
-        <th>Inventory</th>
-        <th></th>
+        <th>Actions</th>
     </tr>
     </thead>
         <tbody>
@@ -23,7 +22,6 @@
             <td>{{this.plantMaturity}}</td>
             <td>{{this.plantPrice}}</td>
             <td>{{this.plantCost}}</td>
-            <td>{{this.plantInventory}}</td>
             <td>
                 <button onclick="editPlant(this)">Edit</button>
                 <button onclick="deletePlant({{this.plantID}})">Delete</button>
@@ -63,9 +61,6 @@
             <nobr><label for="plantCost">Cost:</label>
             <input type="number" id="plantCost"></nobr>
 
-            <nobr><label for="plantInventory">Inventory:</label>
-            <input type="number" id="plantInventory"></nobr>
-
         </fieldset>
             <button type="button" onclick="addOrUpdatePlantInData()">Save Plant</button>
             <button type="button" onclick="hidePlantForm()">Cancel</button>
@@ -76,7 +71,7 @@
         <h3>Delete Plant</h3>
         <form id="deleteForm">
             <p id="deletePlantConfirmation"></p>
-            <button type="button" onclick="removePlantFromData()">Delete Order</button>
+            <button type="button" onclick="removePlantFromData()">Delete Plant</button>
             <button type="button" onclick="hideDeleteForm()">Cancel</button>
         </form>
     </div>
