--- a/views/plantssuppliers.hbs
+++ b/views/plantssuppliers.hbs
@@ -4,19 +4,23 @@
     <table>
         <thead>
         <tr>
+            <th>PlantSupplier ID</th>
             <th>Plant Name</th>
             <th>Supplier Name</th>
+            <th>Quantity</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
             {{#each data}}
             <tr>
+            <td>{{this.plantSupplierID}}</td>
             <td data-id="{{this.plantID}}">{{this.plantName}}</td>
             <td data-id="{{this.supplierID}}">{{this.supplierName}}</td>
+            <td>{{this.plantQuantity}}</td>
             <td>
                 <button onclick="editPlantsSupplier(this)">Edit</button>
-                <button onclick="deletePlantSupplier({{this.plantID}},{{this.supplierID}})">Delete</button>
+                <button onclick="deletePlantSupplier({{this.plantSupplierID}})">Delete</button>
             </td>
         </tr>
         {{/each}}
@@ -27,22 +31,30 @@
         <h3 id="formHeader"></h3>
         <form id="plantsSuppliersForm" data-mode="">
             <fieldset>
-            <nobr><label for="plantID">Plant</label>
-            <select id="plantID">
-                {{#each plants}}
-                <option value="{{this.plantID}}">{{this.plantName}}</option>
-                {{/each}}
-            </select>
-            </nobr>
-            <nobr><label for="supplierID">Supplier</label>
-            <select id="supplierID">
-                {{#each suppliers}}
-                <option value="{{this.supplierID}}">{{this.supplierName}}</option>
-                {{/each}}
-            </select>
-            </nobr>
-        </fieldset>
-            <button type="button" onclick="addOrUpdatePlantSupplierInData()">Save Plant</button>
+                <nobr><label for="plantSupplierID"><!--To keep track of plantSupplerID--></label>
+                <input type="hidden" id="plantSupplierID" readonly></nobr>
+
+                <nobr><label for="plantID">Plant</label>
+                <select id="plantID">
+                    {{#each plants}}
+                    <option value="{{this.plantID}}">{{this.plantName}}</option>
+                    {{/each}}
+                </select>
+                </nobr>
+
+                <nobr><label for="supplierID">Supplier</label>
+                <select id="supplierID">
+                    {{#each suppliers}}
+                    <option value="{{this.supplierID}}">{{this.supplierName}}</option>
+                    {{/each}}
+                </select>
+                </nobr>
+
+                <nobr><label for="plantQuantity">Quantity</label>
+                <input type="number" id="plantQuantity"></nobr>
+
+            </fieldset>
+            <button type="button" onclick="addOrUpdatePlantSupplierInData()">Save PlantSupplier</button>
             <button type="button" onclick="hideForm()">Cancel</button>
         </form>
     </div>
@@ -51,7 +63,7 @@
         <h3>Delete Plant</h3>
         <form id="deleteForm">
             <p id="deletePlantSupplierConfirmation"></p>
-            <button type="button" onclick="removePlantSupplierFromData()">Delete Order</button>
+            <button type="button" onclick="removePlantSupplierFromData()">Delete PlantSupplier</button>
             <button type="button" onclick="hideDeleteForm()">Cancel</button>
         </form>
     </div>
