--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -1,5 +1,6 @@
     <h2>Customer Orders</h2>
     <script src="orders.js"></script>
+    <script>const plants = {{json plants}};</script>
     <button onclick="showAddOrderForm()">Add</button>
     <table id="ordersTable">
         <thead>
@@ -25,7 +26,7 @@
             <td>{{this.customerName}}</td>
             <td>{{this.plants}}</td>
             <td>
-                <button onclick="editOrder(this)">Edit</button>
+                <button onclick="editOrder({{this.orderID}})">Edit</button>
                 <button onclick="deleteOrder({{this.orderID}})">Delete</button>
             </td>
         </tr>
@@ -47,10 +48,10 @@
     </select>
 
     {{#each plants}}
-    <div class="plant-row">
-        <label for="plant-{{this.plantID}}">{{this.plantName}} {{this.plantPrice}}</label>
+    <div id="plantsContainer" class="plant-row">
+        <!--<label for="plant-{{this.plantID}}">{{this.plantName}} {{this.plantPrice}}</label>
         <input type="number" id="plant-{{this.plantID}}" name="plant-{{this.plantID}}" placeholder="Quantity" min="0">
-        <input type="hidden" id="price-{{this.plantID}}" value="{{this.plantPrice}}">
+        <input type="hidden" id="price-{{this.plantID}}" value="{{this.plantPrice}}">-->
     </div>
     {{/each}}
 
