--- a/views/suppliers.hbs
+++ b/views/suppliers.hbs
@@ -1,3 +1,11 @@
+<!-- 
+Citation for the handlebar code on this page:
+Date: 12/08/2024
+Copied from /OR/ Adapted from /OR/ Based on:
+Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main/Step%204%20-%20Dynamically%20Displaying%20Data
+-->
+
+
 <h2>Suppliers</h2>
 <script src="suppliers.js"> </script>
 <button onclick="addSupplier()">Add</button>
