--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -1,3 +1,10 @@
+<!-- 
+Citation for the handlebar code on this page:
+Date: 12/08/2024
+Copied from /OR/ Adapted from /OR/ Based on:
+Source URL: https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main/Step%204%20-%20Dynamically%20Displaying%20Data
+-->
+
 <!-- customers.hbs -->
 
 <h2>Customers</h2>
